--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
     "react-dom": "18.2.0",
     "tailwind": "^4.0.0",
     "typescript": "4.9.5"
+  },
+  "engines" : {
+    "node" : ">=16.15.0",
+    "npm": "please-use-yarn",
+    "yarn": ">= 1.19.1"
   }
 }
